fix nav on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,12 @@ nav a:hover {
     transition: var(--base-nav-transition);
 }
 
+@media (max-width: 768px) {
+    .main-nav {
+        display: none;
+    }
+}
+
 .social-nav {
     margin-left: auto;
     display: flex;
